[metadata]
description-file = README.md
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rpg-game = rpg_game.__main__:main

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
dev =
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pylint>=3.0.0

[coverage:run]
source = rpg_game
omit =
    */tests/*
    */__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    raise ImportError
    if __name__ == .__main__.:
    pass
    raise
    raise Exception
    raise ValueError
    raise TypeError
    raise AttributeError
    raise RuntimeError
